RESOLVED FIXED115790
[WebKit2] REGRESSION (Custom Protocols): Reproducible crash when navigating to URL with an invalid scheme
https://bugs.webkit.org/show_bug.cgi?id=115790
Summary [WebKit2] REGRESSION (Custom Protocols): Reproducible crash when navigating t...
Dieter Komendera
Reported 2013-05-08 03:18:53 PDT
Created attachment 201049 [details] full crash report Mac OS X 10.8.3, Safari 6.0.4, WebKit nightly 149711 * Paste that into address bar: ht"tp://webkit.org * Hit enter 0 com.apple.WebKit2 0x000000010628f1b5 WTF::String* WTF::HashTable<WTF::String, WTF::String, WTF::IdentityExtractor, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::String> >::lookup<WTF::IdentityHashTranslator<WTF::StringHash>, WTF::String>(WTF::String const&) + 33 1 com.apple.WebKit2 0x00000001061f4c08 WebKit::CustomProtocolManager::supportsScheme(WTF::String const&) + 54 2 com.apple.WebKit2 0x00000001061f4b87 +[WKCustomProtocol canInitWithRequest:] + 87 3 com.apple.Foundation 0x00007fff8ab2c15d +[NSURLProtocol(NSURLProtocolPrivate) _protocolClassForRequest:allowCF:] + 261 4 com.apple.Foundation 0x00007fff8ab2c011 +[NSURLConnection canHandleRequest:] + 24 5 com.apple.WebKit2 0x00000001062d70a4 WebKit::WebPage::platformCanHandleRequest(WebCore::ResourceRequest const&) + 46 6 com.apple.WebKit2 0x00000001062cb924 WebKit::WebPage::canHandleRequest(WebCore::ResourceRequest const&) + 118 7 com.apple.WebKit2 0x000000010632ec00 WKBundlePageCanHandleRequest + 13
Attachments
full crash report (63.01 KB, text/plain)
2013-05-08 03:18 PDT, Dieter Komendera
no flags
Patch (16.31 KB, patch)
2013-05-08 15:36 PDT, Andy Estes
ap: review+
Alexey Proskuryakov
Comment 1 2013-05-08 09:33:48 PDT
Andy Estes
Comment 2 2013-05-08 15:36:58 PDT
Andy Estes
Comment 3 2013-05-08 15:40:45 PDT
Note You need to log in before you can comment on or make changes to this bug.